--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <body class="font-poppins text-slate-700 overflow-x-hidden">
     <header class="">
       <div class="container !py-0">
-        <div class="flex justify-between py-4">
+        <div class="flex justify-between py-2">
           <div class="grid place-items-center">
             <a href="https://zaynertrans.web.id/">
               <img
@@ -385,7 +385,40 @@
             </p>
           </div>
           <div
-            class="grid grid-cols-12 gap-x-5 gap-y-7 [&>div]:col-span-6 [&>div]:sm:col-span-4 [&>div]:md:col-span-3 [&>div]:lg:col-span-2 [&>div]:rounded-xl [&>div]:border [&>div]:shadow-xl [&>div]:overflow-hidden [&>div]:bg-white [&>div]:relative [&>div>a]:absolute [&>div>a]:inset-0 [&_img]:border-b [&>div_div]:p-4 [&>div_div]:md:px-5 [&>div_div]:lg:px-6 [&_h3]:line-clamp-3 [&_h3]:text-sm [&_h3]:text-slate-700 hover:[&_h3]:text-orange-500 [&_h3]:z-10 [&_h3]:relative [&_h3]:cursor-pointer [&_svg]:size-4 [&_svg]:mx-2 [&_svg]:py-0.5 [&_svg]:inline-block"></div>
+            class="grid grid-cols-12 gap-x-5 gap-y-7 [&>div]:col-span-6 [&>div]:sm:col-span-4 [&>div]:md:col-span-3 [&>div]:lg:col-span-2 [&>div]:rounded-xl [&>div]:border [&>div]:shadow-xl [&>div]:overflow-hidden [&>div]:bg-white [&>div]:relative [&>div>a]:absolute [&>div>a]:inset-0 [&_img]:border-b [&>div_div]:p-4 [&>div_div]:md:px-5 [&>div_div]:lg:px-6 [&_h3]:line-clamp-3 [&_h3]:text-sm [&_h3]:text-slate-700 hover:[&_h3]:text-orange-500 [&_h3]:z-10 [&_h3]:relative [&_h3]:cursor-pointer [&_svg]:size-4 [&_svg]:mx-2 [&_svg]:py-0.5 [&_svg]:inline-block">
+            <div class="">
+              <a
+                title="rute Travel Bandung Jakarta"
+                href="https://api.whatsapp.com/send/?phone=6285870210699&text=Halo+admin+https://zaynertrans.web.id/&type=phone_number&app_absent=0!"
+                class=""></a>
+              <img
+                src="./src/img/rute.jpg"
+                width="100%"
+                height="100%"
+                alt="rute Travel Bandung Jakarta"
+                class="" />
+              <div class="">
+                <a
+                  href="https://api.whatsapp.com/send/?phone=6285870210699&text=Halo+admin+https://zaynertrans.web.id/&type=phone_number&app_absent=0">
+                  <h3 class="">
+                    Travel Bandung Jakarta
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="">
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M7.5 21 3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" />
+                    </svg>
+                  </h3>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- Rute Travel -->
@@ -716,13 +749,9 @@
                     </div>
                     <p class="testimoni">
                       Saya menggunakan jasa Travel Zayner Trans untuk rute
-                      <br />
-                      <b>Warning</b>: Undefined array key 0 in
-                      <b>C:\xampp\htdocs\travel\zaynertrans.web.id\index.php</b>
-                      on line <b>721</b><br />
-                      . Pelayanan sangat memuaskan, armada nyaman, tepat waktu,
-                      dan staf ramah. Pengalaman perjalanan yang menyenangkan
-                      dan saya sangat puas!
+                      Travel Bandung Jakarta. Pelayanan sangat memuaskan, armada
+                      nyaman, tepat waktu, dan staf ramah. Pengalaman perjalanan
+                      yang menyenangkan dan saya sangat puas!
                     </p>
                     <div class="user-testimoni">
                       <img
