--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       href="./src/css/swiper-bundle.min.css" />
   </head>
 
-  <body class="font-poppins text-slate-700 overflow-x-hidden">
+  <body
+    class="font-poppins text-slate-700 overflow-x-hidden"
+    style="display: none">
     <header class="">
       <div class="container !py-0">
         <div class="flex justify-between py-2">
